2012-03-05 <fumiyas at OSS Technology, Inc., Japan>
	* Use Digest::SHA instead of Digest::SHA1 if Perl version > 5.10.0
	* smbldap-usermod: -M, -O, -T option: Remove associated attribute
	  when the null value is specified

2011-09-26 <fumiyas at OSS Technology, Inc., Japan>
	* new tag 0.9.7

2011-09-06 <fumiyas at OSS Technology, Inc., Japan>
	* smbldap-populate: Create parent entry for $config{sambaUnixIdPooldn}
	  if it does not exist

2011-09-02 <fumiyas at OSS Technology, Inc., Japan>
	* smbldap-config: Rename from configure.pl

2011-07-23 <fumiyas at OSS Technology, Inc., Japan>
	* smbldap-populate: Create parent entry for $config{usersdn}
	  (and others) if it does not exist
	  (e.g. usersdn="ou=Users,ou=parent,${suffix}" in smbldap.conf)

2011-07-13 <fumiyas at OSS Technology, Inc., Japan>
	* smbldap-useradd: New option: --non-unique (Allow the creation of a
	  user account with a duplicate (non-unique) UID)

2011-07-12 <fumiyas at OSS Technology, Inc., Japan>
	* smbldap-usermod: New option: --ou NODE (move user entry to the
	  specified organazional unit)
	* Canonize user name to treat the memberUid as case-sensitive
	  attribute (but the uid attribute is case-insensitive)
	* smbldap-useradd: New option: -p (allow to set password from
	  STDIN without verification, e.g. using a pipe)

2011-07-08 <fumiyas at OSS Technology, Inc., Japan>
	* smbldap-populate: Use Net::LDAP::Entry for populating entries

2011-06-29 <fumiyas at OSS Technology, Inc., Japan>
	* Use sambaNextRid attribute in sambaDomain entry for the next RID
	  as same as Samba 3.0+ (only when sambaAlgorithmicRidBase attribute
	  does NOT exists in sambaDomain entry for backward compatibility)

2011-06-24 <fumiyas at OSS Technology, Inc., Japan>
	* Rename smbldap.conf parameters:
	  - hash_encrypt -> password_hash
	  - crypt_salt_format -> password_crypt_salt_format
	* LDAPv3 Password Modify (RFC 3062) extended operation
	  support when password_hash="exop" in smbldap.conf
